--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.mainWrapper{
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  padding: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
   height: 100%;
@@ -7,4 +19,18 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+}
+.intro{
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  padding: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
