--- a/src/components/ChatBubble.css
+++ b/src/components/ChatBubble.css
@@ -5,30 +5,35 @@
   display: inline-block;
   display: flex;
   flex-direction: column;
-  font-size: 1.15em;
+  font-size: 1em;
   font-weight: 300;
   border-radius: 10px;
   -webkit-border-radius:10px;
   -moz-border-radius:10px;
-  transition: all 1s ease-in-out;
+  transition: all 1s;
   margin:5px 10px;
   padding: 5px;
   word-wrap: break-word;
   position: relative;
+  visibility: hidden;
 }
 .user{
   border:solid 2px #FFF;
-  color: #FFF;
-  font-weight: 300;
+  background: #FFF;
+  color: #000;
+  font-weight: 100;
   display: inline-block;
   flex-direction: column;
   margin-right: auto;
+  visibility: visible;
 }
 .system{
   border:solid 2px #FFF;
-  color: #FFF;
-  font-weight: 300;
+  background: #FFF;
+  color: #000;
+  font-weight: 100;
   display: inline-block;
   flex-direction: column;
   margin-left: auto;
+  visibility: visible;
 }
