--- a/src/components/MessageBox.css
+++ b/src/components/MessageBox.css
@@ -24,4 +24,10 @@
     font-size: 1.25em;
     max-height: 100%;
     overflow-y: auto;
+    border: solid 2px #4a148c;
+    border-radius: 10px;
+    resize: none;
+}
+.textInput:focus{
+  outline: none !important;
 }
