--- a/src/containers/ChatboxContainer.css
+++ b/src/containers/ChatboxContainer.css
@@ -1,18 +1,18 @@
 .chatbox_container{
   display: flex;
   height: 100%;
-  max-height: inherit;
+  max-height: 100%;
   flex-direction: column;
   width: 50%;
   margin: 0 auto;
   border: solid 3px #FFF;
   border-radius: 20px;
+  display: none;
 }
 .chatbox_wrapper{
   display: inherit;
   flex: 8;
   flex-direction: inherit;
-  height: 80%;
   max-height: 500px;
   padding: 10px;
   align-items: flex-end;
@@ -27,4 +27,7 @@
   min-height:20%;
   align-items: center;
   justify-content: center;
+}
+.show{
+  display: block;
 }
