--- a/src/containers/Intro.css
+++ b/src/containers/Intro.css
@@ -9,7 +9,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center;background: #4a148c ;
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Safari */
+  transform: rotate(90deg);
 }
 .animate{
       /*background-position:right bottom;*/
@@ -24,7 +27,13 @@
 }
 @keyframes colorchange
     {
-      0%   {background: #4a148c ;font-size: 4em;}
-      100%  {background: #4a148c;font-size: 1em;}
+      0%   {
+        -ms-transform: rotate(90deg); /* IE 9 */
+        -webkit-transform: rotate(90deg); /* Safari */
+        transform: rotate(90deg);
+  }
+      100%  {-ms-transform: rotate(0deg); /* IE 9 */
+      -webkit-transform: rotate(0deg); /* Safari */
+      transform: rotate(0deg);}
 
     }
