--- a/src/containers/Intro.css
+++ b/src/containers/Intro.css
@@ -1,5 +1,4 @@
 .introWrapper{
-  transition: all 2s ease;
   height: 100%;
   width: 100%;
   min-width: 100%;
@@ -9,31 +8,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;background: #4a148c ;
-  -ms-transform: rotate(90deg); /* IE 9 */
-  -webkit-transform: rotate(90deg); /* Safari */
-  transform: rotate(90deg);
-}
-.animate{
-      /*background-position:right bottom;*/
-      animation:  colorChange 2s linear;
-      -webkit-animation: colorchange 2s linear;
+  justify-content: center;
+  background: #4a148c ;
+
 }
 .introWrapper h1{
   font-family: 'Roboto',sans-serif;
-  font-size: 3em;
   font-weight: 100;
   color: #FFF;
+  transition: all 1s;
+  margin: 0 auto;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
-@keyframes colorchange
-    {
-      0%   {
-        -ms-transform: rotate(90deg); /* IE 9 */
-        -webkit-transform: rotate(90deg); /* Safari */
-        transform: rotate(90deg);
-  }
-      100%  {-ms-transform: rotate(0deg); /* IE 9 */
-      -webkit-transform: rotate(0deg); /* Safari */
-      transform: rotate(0deg);}
-
-    }
+.animatedText{
+  font-size: 0em;
+  transition: all 2s ease;
+}
+.animate{
+  font-size: 4em;
+}
+.exit{
+  font-size: 0em;
+}
