--- a/src/components/TextAnimater.css
+++ b/src/components/TextAnimater.css
@@ -22,6 +22,7 @@
   flex-direction: column;
   transition: all 1s ease;
   opacity: 0;
+  visibility: hidden;
   -ms-transform: scale(-2,2); /* IE 9 */
     -webkit-transform: scale(-2,-2); /* Safari */
     transform: scale(-2,-2); /* Standard syntax */
@@ -35,6 +36,7 @@
 .animate-button{
   font-size: 2em;
   opacity: 1;
+  visibility: visible;
   -ms-transform: scale(1,1); /* IE 9 */
     -webkit-transform: scale(1,1); /* Safari */
     transform: scale(1,1); /* Standard syntax */
