--- a/src/containers/ChatboxContainer.css
+++ b/src/containers/ChatboxContainer.css
@@ -1,24 +1,31 @@
 .chatbox_container{
   display: flex;
-  height: 100%;
-  max-height: 100%;
+  height: 95%;
+  max-height: 95%;
   flex-direction: column;
   width: 50%;
-  margin: 0 auto;
+  margin: 25px auto;
   border: solid 3px #FFF;
   border-radius: 20px;
-  display: none;
+  transition: all 0.5s ease;
+  position: absolute;
+  top: 100%;
+  left: 25%;
 }
 .chatbox_wrapper{
-  display: inherit;
+  display: inline-block;
   flex: 8;
   flex-direction: inherit;
   max-height: 500px;
-  padding: 10px;
+  padding: 10px 0px;
   align-items: flex-end;
   justify-content: flex-end;
+  vertical-align: bottom;
   overflow-y: auto;
-  box-sizing: border-box;
+}
+.chatbox_wrapper > div{
+  display: flex;
+  vertical-align: bottom;
 }
 .messageBox_wrapper{
   display: inherit;
@@ -28,6 +35,6 @@
   align-items: center;
   justify-content: center;
 }
-.show{
-  display: block;
+.show-chatbox{
+  top: 0;
 }
