--- a/src/containers/Intro.css
+++ b/src/containers/Intro.css
@@ -10,5 +10,11 @@
   align-items: center;
   justify-content: center;
   background: #4a148c ;
-
+  display: none;
+  opacity: 0;
+  transition: all 1s;
+}
+.show-intro{
+  opacity: 1;
+  display: flex;
 }
